--- a/app/project/project-detail.component.html
+++ b/app/project/project-detail.component.html
@@ -1,11 +1,18 @@
 <div *ngIf="project">
-  <h2>{{project.name}}</h2>
+  <div *ngIf="!editProjectName">
+    <h2>{{project.name}} <button (click)="toggleEditProjectName()">Edit</button></h2>
+  </div>
+  <div *ngIf="editProjectName">
+    <input [(ngModel)]="project.name"><button (click)="toggleEditProjectName(); save()">Save</button>
+  </div>
+
   <p *ngIf="project.description">Description: {{project.description}}</p>
   <p>Difficulty: {{project.difficulty}}</p>
   <p>People on this project: </p>
   <ul>
     <li *ngFor="let person of project.people_on_project">
       {{person.name}}
+      <p>Expertise: <span *ngFor="let skill of person.expertise; let finalSkill = last">{{skill}}{{finalSkill ? "" : ", "}}</span></p>
     </li>
     <li><input [(ngModel)]="newPersonName" placeholder="Add Name"><button (click)="addPersonToProject()">+</button></li>
   </ul>
