--- a/app/project/project-detail.component.html
+++ b/app/project/project-detail.component.html
@@ -1,7 +1,6 @@
-<alert dismissOnTimeout=3000>You are editing a project!</alert>
 <div *ngIf="project">
   <div *ngIf="!editProjectName">
-    <h2>{{project.name}} <button (click)="toggleEditProjectName()">Edit</button></h2>
+    <span class="h2">{{project.name}}</span> <button (click)="toggleEditProjectName()">Edit</button>
   </div>
   <div *ngIf="editProjectName">
     <input [(ngModel)]="project.name"><button (click)="toggleEditProjectName(); save()">Save</button>
