Adjusting to new API that returns objects

--- a/app/project/find-projects.component.html
+++ b/app/project/find-projects.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div *ngIf="isCreatingProject">
-  <project-edit></project-edit>
+  <project-edit (clickedSave)="clickedSave($event)"></project-edit>
 </div>
 
 <div *ngFor="let project of projects" (click)="gotoDetail(project._id)" class="well">
