--- a/app/project/project-detail.component.html
+++ b/app/project/project-detail.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="project">
   <div *ngIf="!editProjectName">
-    <span class="h2">{{project.name}}</span> <button (click)="toggleEditProjectName()">Edit</button>
+    <span class="h2">{{project.name}}</span> <button (click)="toggleEditProjectName()"><i class="fa fa-pencil" aria-hidden="true"></i> Edit</button>
   </div>
   <div *ngIf="editProjectName">
     <input [(ngModel)]="project.name"><button (click)="toggleEditProjectName(); save()">Save</button>
@@ -8,14 +8,18 @@
 
   <p *ngIf="project.description">Description: {{project.description}}</p>
   <p>Difficulty: {{project.difficulty}}</p>
-  <p>People on this project: </p>
-  <ul>
+  <p class="h3">{{project.people_on_project.length}} People on this project: </p>
+  <ul class="list-unstyled">
     <li *ngFor="let person of project.people_on_project; let i = index">
-      <button (click)="removePersonFromProject(i)"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button>
-      {{person.name}}
-      <p>Expertise: <span *ngFor="let skill of person.expertise; let finalSkill = last">{{skill}}{{finalSkill ? "" : ", "}}</span></p>
+      <div class="col-md-1">
+        <button (click)="removePersonFromProject(i)" class="btn btn-default"><i class="fa fa-minus" aria-hidden="true"></i></button>
+      </div>
+      <div class="col-md-11">
+        <span class="h4">{{person.name}}</span>
+        <p>Expertise: <span *ngFor="let skill of person.expertise; let finalSkill = last">{{skill}}{{finalSkill ? "" : ", "}}</span></p>
+      </div>
     </li>
-    <li><input [(ngModel)]="newPersonName" placeholder="Add Name"><button (click)="addPersonToProject()">+</button></li>
+    <li><input [(ngModel)]="newPersonName" placeholder="Add Name"><button (click)="addPersonToProject()"><i class="fa fa-plus" aria-hidden="true"></i></button></li>
   </ul>
   <button (click)="goBack()">Back</button>
 </div>
