--- a/app/project/project-detail.component.html
+++ b/app/project/project-detail.component.html
@@ -3,42 +3,51 @@
     <span class="h2">{{project.name}}</span> <button (click)="toggleEditProjectName()" *ngIf="mouseState.over.name" class="btn btn-default"><i class="fa fa-pencil" aria-hidden="true"></i> Edit Name</button>
   </div>
   <div *ngIf="editProjectName">
-    <input [(ngModel)]="project.name"><button (click)="toggleEditProjectName(); save()">Save</button>
+    <input [(ngModel)]="project.name"><button (click)="toggleEditProjectName(); save()" class="form-control">Save</button>
   </div>
 
   <div *ngIf="!editProjectDescription" (mouseover)="mouseOver('description', true)" (mouseout)="mouseOver('description', false)">
     <span class="h3">Description:</span> {{project.description}} <button (click)="toggleEditProjectDescription()" *ngIf="mouseState.over.description" class="btn btn-default"><i class="fa fa-pencil" aria-hidden="true"></i> Edit Description</button>
   </div>
   <div *ngIf="editProjectDescription">
-    <textarea [(ngModel)]="project.description"></textarea><button (click)="toggleEditProjectDescription(); save()">Save</button>
+    <textarea [(ngModel)]="project.description" class="form-control"></textarea><button (click)="toggleEditProjectDescription(); save()">Save</button>
   </div>
   <div *ngIf="!editProjectDifficulty" (mouseover)="mouseOver('difficulty', true)" (mouseout)="mouseOver('difficulty', false)">
     <span class="h3">Difficulty:</span> {{project.difficulty}} <button (click)="toggleEditProjectDifficulty()" *ngIf="mouseState.over.difficulty" class="btn btn-default"><i class="fa fa-pencil" aria-hidden="true"></i> Edit Difficulty</button>
   </div>
   <div *ngIf="editProjectDifficulty">
-    <input [(ngModel)]="project.difficulty" type="number"><button (click)="toggleEditProjectDifficulty(); save()">Save</button>
+    <input [(ngModel)]="project.difficulty" type="number" class="form-control"><button (click)="toggleEditProjectDifficulty(); save()">Save</button>
   </div>
+  
   <p class="h3">{{project.people_on_project.length}} People on this project: </p>
-  <ul class="list-unstyled">
-    <li *ngFor="let person of project.people_on_project; let i = index">
-      <div class="col-md-1">
-        <button (click)="removePersonFromProject(i)" class="btn btn-default"><i class="fa fa-minus" aria-hidden="true"></i></button>
+  <div *ngFor="let person of project.people_on_project; let i = index" class="row">
+    <div class="col-md-1">
+      <button (click)="removePersonFromProject(i)" class="btn btn-default"><i class="fa fa-minus" aria-hidden="true"></i></button>
+    </div>
+    <div class="col-md-11">
+      <span class="h4">{{person.name}}</span>
+      <div>Skills:
+        <div *ngFor="let skill of person.skills; let finalSkill = last">
+          <button (click)="removeSkillFromPerson(person, skill)" class="btn btn-default btn-xs">
+              <i class="fa fa-minus" aria-hidden="true"></i>
+            </button> {{skill.name}}: Level {{skill.level}}
+        </div>
+        <div class="form-inline">
+          <input placeholder="Skill Name" #addSkillName class="form-control">
+          <input placeholder="Skill Level" #addSkillLevel type="number" class="form-control">
+          <button (click)="addSkillToPerson(person, addSkillName.value, addSkillLevel.value)" class="btn btn-default"><i class="fa fa-plus" aria-hidden="true"></i></button>
+        </div>
       </div>
-      <div class="col-md-11">
-        <span class="h4">{{person.name}}</span>
-        <p>Skills:
-          <div *ngFor="let skill of person.skills; let finalSkill = last">
-            <button (click)="removeSkillFromPerson(person, skill)" class="btn btn-default"><i class="fa fa-minus" aria-hidden="true"></i></button>{{skill.name}}: Level {{skill.level}}
-          </div>
-          <div>
-            <input placeholder="Skill Name" #addSkillName>
-            <input placeholder="Skill Level" #addSkillLevel type="number">
-            <button (click)="addSkillToPerson(person, addSkillName.value, addSkillLevel.value)" class="btn btn-default"><i class="fa fa-plus" aria-hidden="true"></i></button>
-          </div>
-        
-      </div>
-    </li>
-    <li><input placeholder="Add Name" #addPersonInput><button (click)="addPersonToProject(addPersonInput.value)"><i class="fa fa-plus" aria-hidden="true"></i></button></li>
-  </ul>
+    </div>
+  </div>
+  
+  <br>
+  
+  <div class="form-inline">
+    <input placeholder="Add Name" #addPersonInput class="form-control">
+    <button (click)="addPersonToProject(addPersonInput.value)" class="btn btn-default">
+        <i class="fa fa-plus" aria-hidden="true"></i>
+      </button>
+  </div>
   <button (click)="goBack()">Back</button>
 </div>
